# AD-Census

./: .gitignore  CMakeLists.txt  INSTALL.sh  PYTHON_README.md  pyproject.toml  requirements.txt  setup.py  test_installation.py
AD-Census/: ADCensusStereo.cpp  cost_computor.cpp  cross_aggregator.cpp  multistep_refiner.cpp  scanline_optimizer.cpp
adcensus/: __init__.py
examples/: example_usage.py  simple_example.py
python/: adcensus_wrapper.cpp
